<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/footballer_silhouette_2" >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:background="@drawable/footballer_silhouette_2"
		android:orientation="vertical">

		<!-- General information -->
		<TextView android:id="@+id/history_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/history_title" android:textColor="@color/black"
			android:textSize="16dp" android:padding="5dp" android:textStyle="bold" />

		<View android:id="@+id/general_info_title_sep"
			android:layout_height="2dp" android:background="@color/black"
			android:paddingLeft="5dp" android:paddingRight="5dp"
			android:layout_width="wrap_content" />


		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
				<TextView android:id="@+id/stadium_build_date_title"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/stadium_build_date" android:textColor="@color/black"
					android:padding="5dp" android:textStyle="bold" />
			
				<TextView android:id="@+id/stadium_build_date_data"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="1900" android:textColor="@color/black"
					 android:padding="5dp" android:layout_toRightOf="@id/stadium_build_date_title"/>

				<TextView android:id="@+id/stadium_first_game_title" android:layout_below="@id/stadium_build_date_title"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/stadium_first_game_date" android:textColor="@color/black"
					 android:padding="5dp" android:textStyle="bold" />
			
				<TextView android:id="@+id/stadium_first_game_data"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="V someone" android:textColor="@color/black"
					 android:padding="5dp"
					android:layout_below="@id/stadium_build_date_data"
					 android:layout_toRightOf="@id/stadium_build_date_title"/>

				<TextView android:id="@+id/stadium_other_history_title"
				 	android:layout_below="@id/stadium_first_game_title"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/stadium_other_history_date" android:textColor="@color/black"
					 android:padding="5dp" android:textStyle="bold" />
			
				<TextView android:id="@+id/stadium_other_history_data"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="other history" android:textColor="@color/black"
					 android:padding="5dp" 
					android:layout_below="@id/stadium_other_history_title"/>


		</RelativeLayout>

	</LinearLayout>
</ScrollView>